--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ h1, h3, p{
     color:orange
 }
 body{
-    background-color:rgb(0, 0, 0) 
+    background-color:rgb(0, 0, 0);
+    margin: 0px;
 }
 img{
     border-radius: 1000px
@@ -17,4 +18,13 @@ g {
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
+}
+header{
+    background-color: white;
+    height: 100px ;
+}
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    color: green;
+    font-size: 90px;
 }
